完善提示词

--- a/VLM_Modele/LLM_prompts/Basic_prompts/demo2ros.yaml
+++ b/VLM_Modele/LLM_prompts/Basic_prompts/demo2ros.yaml
@@ -14,7 +14,10 @@
             - navigate
             - pick
             - place
-
+            Allowed parameter names (only these can be used):
+            - location
+            - object
+            - distance
             Output format (JSON ONLY):
             {{
               "action": "<action_name>",
