--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /dora-interactive-v2.dora-session.yaml
-.env
+VLM_Modele/.env
 
 # Python
 __pycache__/
@@ -13,7 +13,7 @@ build/
 dist/
 venv/
 env/
-
+out
 # Dora Module outputs
 Dora_Module/out/
 
