修复相关bug,然后均测试通过,可以进行下一步的测试

--- a/Dora_Module/dora-interactive-mcp.yaml
+++ b/Dora_Module/dora-interactive-mcp.yaml
@@ -8,7 +8,7 @@ nodes:
     outputs: [user_command]
 
   - id: llm-agent-mcp
-    path: ../MCP_Server/llm_agent_with_mcp.py
+    path: llm_agent_with_mcp.py
     inputs:
       user_command: ui-input-node/user_command
     outputs: [command]
