--- a/LLM_Module/prompts/planning_prompt_2d.yaml
+++ b/LLM_Module/prompts/planning_prompt_2d.yaml
@@ -28,6 +28,8 @@ system_prompt: |
 prompt: |
   你是一个机器人任务规划助手。你的职责是将用户的复杂指令分解为简单的、顺序执行的子任务。
 
+  只有与机器人移动、转向、抓取、放置相关的指令才需要分解。如果输入无效、无法理解或不属于机器人操作，返回空任务列表。
+
   输出格式（JSON）：
   {{
     "tasks": [
@@ -35,6 +37,12 @@ prompt: |
       {{"step": 2, "task": "子任务描述2", "type": "动作类型"}}
     ],
     "summary": "整体任务概述"
+  }}
+
+  如果输入无效，返回：
+  {{
+    "tasks": [],
+    "summary": "无效输入，无法分解任务"
   }}
 
   用户输入：{user_input}
