修改架构,使得更加简单,易于拓展

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+# ========================================
 # 敏感信息
+# ========================================
 .env
 .env.local
 *.key
@@ -6,7 +8,9 @@
 credentials.json
 config.json
 
+# ========================================
 # Python
+# ========================================
 __pycache__/
 *.py[cod]
 *$py.class
@@ -23,11 +27,15 @@ ENV/
 out/
 *.log
 
+# ========================================
 # Jupyter Notebook
+# ========================================
 .ipynb_checkpoints
 *.ipynb
 
+# ========================================
 # IDE
+# ========================================
 .vscode/
 .idea/
 *.swp
@@ -35,11 +43,18 @@ out/
 *~
 .DS_Store
 
-# Dora 会话文件
+# ========================================
+# 项目特定
+# ========================================
+
+# 临时通信队列文件
+/tmp/robot_finalproject/
+
+# Dora 会话文件（已弃用，但保留以兼容）
 *.dora-session.yaml
 dora-interactive-v2.dora-session.yaml
 
-# ROS2 build artifacts (编译产物)
+# ROS2 build artifacts (已弃用，但保留)
 **/build/
 **/install/
 **/log/
@@ -56,15 +71,16 @@ temp/
 *.gazebo
 /gazebo_models/
 
-# 日志文件
-*.log
-
+# ========================================
 # 测试和覆盖率
+# ========================================
 .pytest_cache/
 .coverage
 htmlcov/
 
+# ========================================
 # 临时文件
+# ========================================
 *.tmp
 *.bak
 *.swp
