新增了VLM模块,并且测试完毕,可以同语言一起输入

--- a/LLM_Module/prompts/planning_prompt_2d.yaml
+++ b/LLM_Module/prompts/planning_prompt_2d.yaml
@@ -29,6 +29,11 @@ prompt: |
 
   只处理与上述可用技能相关的指令。如果输入无效、无法理解或不属于机器人操作范围，返回空任务列表。
 
+  重要规则：
+  - 如果用户指令中包含图片文件路径（如 .png, .jpg），在子任务描述中必须保留完整的路径信息
+  - 特别是调用 detect_color_and_act 时，必须明确指定图片路径
+  - 示例："根据 /home/path/to/image.png 检测颜色" 应该保留完整路径
+
   输出格式（JSON）：
   {{{{
     "tasks": [
@@ -57,6 +62,17 @@ prompt: |
       {{{{ "step": 2, "task": "向前移动1米", "type": "移动"}}}}
     ],
     "summary": "先转向再前进"
+  }}}}
+
+  示例（带图片路径）:
+  输入: "前进1米，然后根据 /home/robot/image.png 检测颜色并执行动作"
+  输出:
+  {{{{
+    "tasks": [
+      {{{{ "step": 1, "task": "向前移动1米", "type": "移动"}}}},
+      {{{{ "step": 2, "task": "根据 /home/robot/image.png 检测颜色并执行相应动作", "type": "视觉检测"}}}}
+    ],
+    "summary": "前进后检测颜色并执行动作"
   }}}}
 
   请处理用户指令:
