--- a/VLM_Module/prompts/perceive_environment.yaml
+++ b/VLM_Module/prompts/perceive_environment.yaml
@@ -1,25 +1,20 @@
-# Environment Perception Prompt
-# 环境感知提示词模板
+# Color Detection Prompt
+# 颜色识别提示词
 
 prompt: |
-  Analyze this robot's camera view and describe the environment.
+  请识别图片中方块的颜色。
 
-  Please provide:
-  1. Overall scene description (indoor/outdoor, room type, etc.)
-  2. Key objects visible and their approximate locations
-  3. Potential obstacles or hazards
-  4. Available paths or open spaces
-  5. Any notable features relevant for navigation
-
-  Respond in JSON format:
+  只返回以下JSON格式，不要其他内容：
   {{
-    "scene_type": "indoor/outdoor",
-    "description": "overall description",
-    "objects": [
-      {{"name": "object_name", "location": "relative_position", "confidence": 0.9}}
-    ],
-    "obstacles": [
-      {{"type": "obstacle_type", "location": "position", "severity": "low/medium/high"}}
-    ],
-    "navigation_advice": "brief navigation suggestion"
+    "color": "颜色英文"
   }}
+
+  颜色映射：
+  - 红色 → "red"
+  - 橙色 → "orange"
+  - 黄色 → "yellow"
+  - 绿色 → "green"
+  - 蓝色 → "blue"
+  - 紫色 → "purple"
+  - 黑色 → "black"
+  - 无方块 → "none"
