--- a/LLM_Module/prompts/planning_prompt_2d.yaml
+++ b/LLM_Module/prompts/planning_prompt_2d.yaml
@@ -33,6 +33,8 @@ prompt: |
   - 如果用户指令中包含图片文件路径（如 .png, .jpg），在子任务描述中必须保留完整的路径信息
   - 特别是调用 detect_color_and_act 时，必须明确指定图片路径
   - 示例："根据 /home/path/to/image.png 检测颜色" 应该保留完整路径
+  - **高级复合工具不要过度分解**：某些工具（如 chase_enemy、detect_color_and_act）已经包含完整的子任务序列，应该作为单个任务执行
+  - 例如："追击敌人"应该映射到 chase_enemy 工具（单个任务），而不是分解为"旋转+前进"（多个任务）
 
   输出格式（JSON）：
   {{{{
@@ -73,6 +75,26 @@ prompt: |
       {{{{ "step": 2, "task": "根据 /home/robot/image.png 检测颜色并执行相应动作", "type": "视觉检测"}}}}
     ],
     "summary": "前进后检测颜色并执行动作"
+  }}}}
+
+  示例（追击敌人 - 高级复合工具）:
+  输入: "追击敌人"
+  输出:
+  {{{{
+    "tasks": [
+      {{{{ "step": 1, "task": "追击最近的敌人", "type": "追击"}}}}
+    ],
+    "summary": "使用chase_enemy工具追击敌人"
+  }}}}
+
+  示例（追击指定坐标 - 高级复合工具）:
+  输入: "追击坐标(700, 300)"
+  输出:
+  {{{{
+    "tasks": [
+      {{{{ "step": 1, "task": "追击坐标(700, 300)", "type": "追击"}}}}
+    ],
+    "summary": "使用chase_target工具追击指定坐标"
   }}}}
 
   请处理用户指令:
