--- a/LLM_Module/prompts/planning_prompt_2d.yaml
+++ b/LLM_Module/prompts/planning_prompt_2d.yaml
@@ -33,8 +33,9 @@ prompt: |
   - 如果用户指令中包含图片文件路径（如 .png, .jpg），在子任务描述中必须保留完整的路径信息
   - 特别是调用 detect_color_and_act 时，必须明确指定图片路径
   - 示例："根据 /home/path/to/image.png 检测颜色" 应该保留完整路径
-  - **高级复合工具不要过度分解**：某些工具（如 chase_enemy、detect_color_and_act）已经包含完整的子任务序列，应该作为单个任务执行
-  - 例如："追击敌人"应该映射到 chase_enemy 工具（单个任务），而不是分解为"旋转+前进"（多个任务）
+  - **chase_enemy 需要两步执行**：必须先调用 get_enemy_positions 获取敌人位置，再调用 chase_enemy(positions) 追击
+  - 例如："追击敌人"应该分解为：1)获取敌人位置 2)追击最近的敌人（两个任务）
+  - detect_color_and_act 是高级复合工具，不要过度分解
 
   输出格式（JSON）：
   {{{{
@@ -77,14 +78,15 @@ prompt: |
     "summary": "前进后检测颜色并执行动作"
   }}}}
 
-  示例（追击敌人 - 高级复合工具）:
+  示例（追击敌人 - 需要两步）:
   输入: "追击敌人"
   输出:
   {{{{
     "tasks": [
-      {{{{ "step": 1, "task": "追击最近的敌人", "type": "追击"}}}}
+      {{{{ "step": 1, "task": "获取敌人位置", "type": "信息获取"}}}},
+      {{{{ "step": 2, "task": "追击最近的敌人", "type": "追击"}}}}
     ],
-    "summary": "使用chase_enemy工具追击敌人"
+    "summary": "先获取敌人位置，再追击最近的敌人"
   }}}}
 
   示例（追击指定坐标 - 高级复合工具）:
